<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginPage"
    android:layout_marginBottom="25dp"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:padding="16dp"
        android:shadowColor="#CCE6E6"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="8"
        android:text="@string/cash_track"
        android:textColor="#FF3399"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#FFDAB3"
        android:textStyle="bold"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="6"
        android:shadowColor="#FF6600"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Login"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:backgroundTint="#00AFC2"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/new_user_register_here"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/Register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="8dp"
        android:backgroundTint="#00AFC2"
        />

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
