<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl1"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoutll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll3"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/ttBal"
            android:layout_marginTop="18dp"
            android:text="@string/balance"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ttbal2"
            android:layout_below="@+id/ttBal"
            android:gravity="center"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TotalBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/ll3"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/total_income"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle='bold' />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Income"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
        </LinearLayout>
                <Button
                    android:id="@+id/AddIncome"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginHorizontal="5dp"
                    android:backgroundTint="#499543"
                    android:text="Add Income"
                    app:cornerRadius="100dp" />
            </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_expense"
            android:gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle='bold' />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee_symbol"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Expense"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_00"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
            </LinearLayout>
            <Button
                android:id="@+id/AddExpense"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="14dp"
                android:backgroundTint="#E14F4F"
                android:text="Add Expense"
                app:cornerRadius="100dp" />
        </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:text="Set a Limit Value"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Limit"
            android:layout_width="115dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:backgroundTint="#E2725B"
            android:text="Limit"
            app:cornerRadius="25dp" />


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:id="@+id/logoutll"
    android:layout_marginHorizontal="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cash_track"
        android:gravity="left"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/navBar"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="#E0E0E0"
        >

        <ImageButton
            android:id="@+id/Home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:src="@drawable/my_image"
            />

        <ImageButton
            android:id="@+id/transactionBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:src="@drawable/my_image2" />

        <ImageButton
            android:id="@+id/ProfileBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="#E0E0E0"
            android:src="@drawable/my_image3"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
